Fixed bug causing #navigation being covered by the page's media elements

--- a/stylesheets/global.css
+++ b/stylesheets/global.css
@@ -42,6 +42,7 @@ body {
     position: -webkit-sticky;
     position: sticky;
     top: 0;
+    z-index: 9999;
 }
 
 #navigation a {
